k8s/prod/zigbee2mqtt-upstairs/zigbee2mqtt.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zigbee2mqtt-upstairs
    app.kubernetes.io/version: 1.19.1
    helm.sh/chart: zigbee2mqtt-9.4.2
  name: zigbee2mqtt-upstairs
  namespace: zigbee2mqtt
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: zigbee2mqtt-upstairs
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zigbee2mqtt-upstairs
    app.kubernetes.io/version: 1.19.1
    helm.sh/chart: zigbee2mqtt-9.4.2
  annotations:
    configmap.reloader.stakater.com/reload: "zigbee2mqtt-upstairs-settings"
  name: zigbee2mqtt-upstairs
  namespace: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt-upstairs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zigbee2mqtt-upstairs
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: ZIGBEE2MQTT_DATA
          value: /data
        image: koenkk/zigbee2mqtt:2.14.2
        imagePullPolicy: IfNotPresent
        name: zigbee2mqtt
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 15m
            memory: 127M
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 8081
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 8081
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 0
          periodSeconds: 5
          tcpSocket:
            port: 8081
          timeoutSeconds: 1
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
            - SYS_ADMIN
          privileged: true
        volumeMounts:
        - mountPath: /data
          name: data
      dnsPolicy: ClusterFirstWithHostNet
      enableServiceLinks: true
      hostNetwork: true
      serviceAccountName: default
      volumes:
      - configMap:
          name: zigbee2mqtt-upstairs-settings
        name: zigbee2mqtt-upstairs-settings
      - name: data
        persistentVolumeClaim:
          claimName: zigbee2mqtt-upstairs-data
