k8s/prod/zigbee2mqtt-upstairs/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt-upstairs
  namespace: zigbee2mqtt
spec:
  defaultBackend:
    service:
      name: zigbee2mqtt-upstairs
      port:
        number: 8081
  ingressClassName: tailscale
  tls:
  - hosts:
    - zigbee2mqtt-upstairs
